--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -160,6 +160,8 @@ canvas {
 		height="100px" />
 	<img src="explosion.png" id="explosion" hidden="true" width="300px"
 		height="300px" />
+	<img src="meteorite.png" id="meteorite" hidden="true" width="86px"
+		height="30px" />
 
 	<audio id="blast" preload="auto">
 		<source src="200466__wubitog__short-explosion.wav" type="audio/wav" />
