animated ship and meteorite added, ship size increased to 50

--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -147,22 +147,15 @@ canvas {
 		<button id="startButton"></button>
 	</div>
 	<!-- preload images -->
-	<img src="spaceship.png" id="spaceship" hidden="true" width="40px"
-		height="40px" />
-	<img src="blackHole.png" id="blackHole" hidden="true" width="100px"
-		height="100px" />
-	<img src="earthLike.png" id="earthLike" hidden="true" width="100px"
-		height="100px" />
-	<img src="gas.png" id="gas" hidden="true" width="100px" height="100px" />
-	<img src="ice.png" id="ice" hidden="true" width="100px" height="100px" />
-	<img src="rocky.png" id="rocky" hidden="true" width="100px"
-		height="100px" />
-	<img src="star.png" id="star" hidden="true" width="100px"
-		height="100px" />
-	<img src="explosion.png" id="explosion" hidden="true" width="300px"
-		height="300px" />
-	<img src="meteorite.png" id="meteorite" hidden="true" width="86px"
-		height="30px" />
+	<img src="spaceship.png" id="spaceship" hidden="true"/>
+	<img src="blackHole.png" id="blackHole" hidden="true"/>
+	<img src="earthLike.png" id="earthLike" hidden="true"/>
+	<img src="gas.png" id="gas" hidden="true"/>
+	<img src="ice.png" id="ice" hidden="true"/>
+	<img src="rocky.png" id="rocky" hidden="true"/>
+	<img src="star.png" id="star" hidden="true"/>
+	<img src="explosion.png" id="explosion" hidden="true"/>
+	<img src="meteorite.png" id="meteorite" hidden="true"/>
 
 	<audio id="blast" preload="auto">
 		<source src="200466__wubitog__short-explosion.wav" type="audio/wav" />
