--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -147,13 +147,13 @@ canvas {
 		<button id="startButton"></button>
 	</div>
 	<!-- preload images -->
-	<img src="spaceship.png" id="spaceship" hidden="true"/>
+	<img src="spacecraft.png" id="spacecraft" hidden="true"/>
 	<img src="blackHole.png" id="blackHole" hidden="true"/>
 	<img src="earthLike.png" id="earthLike" hidden="true"/>
 	<img src="gas.png" id="gas" hidden="true"/>
 	<img src="ice.png" id="ice" hidden="true"/>
 	<img src="rocky.png" id="rocky" hidden="true"/>
-	<img src="star.png" id="star" hidden="true"/>
+	<img src="withRings.png" id="withRings" hidden="true"/>
 	<img src="explosion.png" id="explosion" hidden="true"/>
 	<img src="meteorite.png" id="meteorite" hidden="true"/>
 
