--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -154,7 +154,7 @@ canvas {
 	<img src="ice.png" id="ice" hidden="true"/>
 	<img src="rocky.png" id="rocky" hidden="true"/>
 	<img src="withRings.png" id="withRings" hidden="true"/>
-	<img src="explosion.png" id="explosion" hidden="true"/>
+	<img src="fireball.png" id="fireball" hidden="true"/>
 	<img src="meteorite.png" id="meteorite" hidden="true"/>
 
 	<audio id="blast" preload="auto">
