start image updated

--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -45,11 +45,13 @@ canvas {
 }
 
 #startButton {
-	margin-top: 320px;
+	margin-top: 420px;
 	margin-left: 300px;
 	width: 200px;
 	height: 105px;
 	background-color: Transparent;
+	background-image: url("start.png");
+	background-size: 100% 100%;
 	border: none;
 }
 
