--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -22,6 +22,13 @@
 <link rel="shortcut icon" href="favicon.png" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <style>
+html {
+	background-image: linear-gradient(90deg, white, grey, white);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+	text-shadow: 1px 1px 10px yellow;
+}
 canvas {
 	background-image: url("space.jpg");
 	z-index: 0;
@@ -30,6 +37,7 @@ canvas {
 	margin-left: -400px;
 	padding: 0px;
 	margin-top: 1.5em;
+	box-shadow: 10px 10px 5px grey;
 }
 
 #logo {
@@ -158,6 +166,7 @@ canvas {
 	<img src="withRings.png" id="withRings" hidden="true"/>
 	<img src="fireball.png" id="fireball" hidden="true"/>
 	<img src="meteorite.png" id="meteorite" hidden="true"/>
+	<img src="galaxy.png" id="galaxy" hidden="true"/>
 
 	<audio id="blast" preload="auto">
 		<source src="200466__wubitog__short-explosion.wav" type="audio/wav" />
