--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -23,7 +23,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <style>
 html {
-	background-image: linear-gradient(90deg, white, grey, white);
+	background-image: linear-gradient(90deg, black, grey, grey);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100%;
@@ -120,6 +120,10 @@ canvas {
 	position: fixed;
 	left: 50%;
 	margin-left: -400px;
+	color: white;
+}
+#authors a {
+	color: yellow;
 }
 
 #scorePanel {
@@ -157,16 +161,16 @@ canvas {
 		<button id="startButton"></button>
 	</div>
 	<!-- preload images -->
-	<img src="spacecraft.png" id="spacecraft" hidden="true"/>
-	<img src="blackHole.png" id="blackHole" hidden="true"/>
-	<img src="earthLike.png" id="earthLike" hidden="true"/>
-	<img src="gas.png" id="gas" hidden="true"/>
-	<img src="ice.png" id="ice" hidden="true"/>
-	<img src="rocky.png" id="rocky" hidden="true"/>
-	<img src="withRings.png" id="withRings" hidden="true"/>
-	<img src="fireball.png" id="fireball" hidden="true"/>
-	<img src="meteorite.png" id="meteorite" hidden="true"/>
-	<img src="galaxy.png" id="galaxy" hidden="true"/>
+	<img src="spacecraft.png" id="spacecraft" hidden="true" data-frame-size="50"/>
+	<img src="blackHole.png" id="blackHole" hidden="true"data-frame-size="100"/>
+	<img src="earthLike.png" id="earthLike" hidden="true" data-frame-size="100"/>
+	<img src="gas.png" id="gas" hidden="true" data-frame-size="100"/>
+	<img src="ice.png" id="ice" hidden="true" data-frame-size="100"/>
+	<img src="rocky.png" id="rocky" hidden="true" data-frame-size="100"/>
+	<img src="withRings.png" id="withRings" hidden="true" data-frame-size="100"/>
+	<img src="fireball.png" id="fireball" hidden="true" data-frame-size="100"/>
+	<img src="meteorite.png" id="meteorite" hidden="true" data-frame-size="100"/>
+	<img src="galaxy.png" id="galaxy" hidden="true" data-frame-size="512"/>
 
 	<audio id="blast" preload="auto">
 		<source src="200466__wubitog__short-explosion.wav" type="audio/wav" />
