--- a/src/main/webapp/StarDrifter.html
+++ b/src/main/webapp/StarDrifter.html
@@ -22,6 +22,13 @@
 <link rel="shortcut icon" href="favicon.png" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <style>
+html {
+	background-image: linear-gradient(90deg, black, grey, grey);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+	text-shadow: 1px 1px 10px yellow;
+}
 canvas {
 	background-image: url("space.jpg");
 	z-index: 0;
@@ -30,6 +37,7 @@ canvas {
 	margin-left: -400px;
 	padding: 0px;
 	margin-top: 1.5em;
+	box-shadow: 10px 10px 5px grey;
 }
 
 #logo {
@@ -112,6 +120,10 @@ canvas {
 	position: fixed;
 	left: 50%;
 	margin-left: -400px;
+	color: white;
+}
+#authors a {
+	color: yellow;
 }
 
 #scorePanel {
